cabal-version:       2.4
name:                day07
version:             0.1.0.0
license:             NONE
author:              Mårten Åsberg
maintainer:          marten.asberg@outlook.com

executable day07
  main-is:             Main.hs
  build-depends:       base >=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
